# flapping_trajectory_optimization

examples/: CMakeLists.txt
examples/twolinkarm/: CMakeLists.txt  twolinkarm.cxx  urdfRead.h
